[gd_scene load_steps=16 format=2]

[ext_resource path="res://CommonScenes/OptionsMenu/OptionsMenuScreen.gd" type="Script" id=1]
[ext_resource path="res://CommonScenes/Buttons/PureText.tres" type="Theme" id=2]
[ext_resource path="res://CommonScenes/OptionsMenu/OptionsScripts/FullscreenOption.gd" type="Script" id=3]
[ext_resource path="res://CommonScenes/Buttons/ArrowsIndicator.tscn" type="PackedScene" id=4]
[ext_resource path="res://CommonScenes/OptionsMenu/OptionsScripts/BGMOption.gd" type="Script" id=5]
[ext_resource path="res://CommonScenes/OptionsMenu/OptionsScripts/BGM_VolumeOption.gd" type="Script" id=6]
[ext_resource path="res://CommonScenes/OptionsMenu/OptionsScripts/Sfx_VolumeOption.gd" type="Script" id=7]
[ext_resource path="res://CommonScenes/Button.gd" type="Script" id=8]
[ext_resource path="res://Fonts/OrbitronMedium30.font" type="BitmapFont" id=9]
[ext_resource path="res://CommonScenes/OptionsMenu/OptionsScripts/InvincibilityOption.gd" type="Script" id=10]
[ext_resource path="res://CommonScenes/UpgradeMenu/sprites/scanline_dark_colorburn.png" type="Texture" id=11]
[ext_resource path="res://CommonScenes/UpgradeMenu/sprites/scanline_bright_overlay.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ColorFrame1:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.9, 0.9, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopEdge:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 115 ), Vector2( 0, 115 ), Vector2( 0, 652 ), Vector2( 100, 652 ), Vector2( -2220, 652 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BottomEdge:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 952 ), Vector2( 0, 952 ), Vector2( 0, 652 ), Vector2( 100, 652 ), Vector2( -2220, 652 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MenuContainer:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.9, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ScanlineFx:modulate:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ScreenBase:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 121 ), Vector2( 0, 121 ), Vector2( 0, 657 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ScreenBase:rect_size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1920, 840 ), Vector2( 1920, 840 ), Vector2( 1920, 0 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "loop"
length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ScanlineBright:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 960, 122 ), Vector2( 960, 162 ), Vector2( 960, 920 ), Vector2( 960, 960 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScanlineBright:region_enabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScanlineBright:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 1920, 0 ), Rect2( 0, 0, 1920, 80 ), Rect2( 0, 705.714, 1920, 80 ), Rect2( 0, 760, 1920, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScanlineBright:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.1 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.3 ), Color( 1, 1, 1, 0.7 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0.5 ) ]
}

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[node name="OptionsMenuScreen" type="CanvasLayer" index="0"]

pause_mode = 2
layer = 4
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/close = SubResource( 1 )
blend_times = [  ]

[node name="ColorFrame1" type="ColorRect" parent="." index="1"]

modulate = Color( 1, 1, 1, 0.9 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -3.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.247059, 0.054902, 0.156863, 1 )

[node name="ScreenBase" type="ColorRect" parent="." index="2"]

modulate = Color( 1, 1, 1, 0.6 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 121.0
margin_right = 1920.0
margin_bottom = 961.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.266667, 0.65098, 1, 0.6 )
_sections_unfolded = [ "Rect" ]

[node name="MenuContainer" type="VBoxContainer" parent="." index="3"]

modulate = Color( 1, 1, 1, 0.9 )
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -275.0
margin_top = 156.0
margin_right = 285.0
margin_bottom = 952.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 25
alignment = 1

[node name="FullscreenOption" type="Button" parent="MenuContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 560.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../Control/OptionsExit")
focus_neighbour_right = NodePath(".")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Fullscreen: --"
flat = false
align = 1
script = ExtResource( 3 )

[node name="ArrowsIndicator" parent="MenuContainer/FullscreenOption" index="0" instance=ExtResource( 4 )]

[node name="BGM" type="Button" parent="MenuContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 81.0
margin_right = 560.0
margin_bottom = 137.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BGM: --"
flat = false
align = 1
script = ExtResource( 5 )

[node name="ArrowsIndicator" parent="MenuContainer/BGM" index="0" instance=ExtResource( 4 )]

[node name="BGM_volume" type="Button" parent="MenuContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 162.0
margin_right = 560.0
margin_bottom = 218.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Music Volume: --"
flat = false
align = 1
script = ExtResource( 6 )

[node name="ArrowsIndicator" parent="MenuContainer/BGM_volume" index="0" instance=ExtResource( 4 )]

[node name="SfxVolume" type="Button" parent="MenuContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 243.0
margin_right = 560.0
margin_bottom = 299.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Sounds Volume: --"
flat = false
align = 1
script = ExtResource( 7 )

[node name="ArrowsIndicator" parent="MenuContainer/SfxVolume" index="0" instance=ExtResource( 4 )]

[node name="EditControls" type="Button" parent="MenuContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 324.0
margin_right = 560.0
margin_bottom = 380.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Edit Controls"
flat = false
align = 1
script = ExtResource( 8 )
pressed_sfx = "ui_confirm"

[node name="EditColors" type="Button" parent="MenuContainer" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 405.0
margin_right = 560.0
margin_bottom = 461.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Edit Colors"
flat = false
align = 1
script = ExtResource( 8 )
pressed_sfx = "ui_confirm"

[node name="ResetSave" type="Button" parent="MenuContainer" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 486.0
margin_right = 560.0
margin_bottom = 542.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reset Save"
flat = false
align = 1
script = ExtResource( 8 )
pressed_sfx = "ui_confirm"

[node name="DebugMenu" type="VBoxContainer" parent="MenuContainer" index="7"]

visible = false
modulate = Color( 1, 1, 1, 0.9 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 567.0
margin_right = 520.0
margin_bottom = 688.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 5
alignment = 0

[node name="Restart" type="Button" parent="MenuContainer/DebugMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 520.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 9 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Restart"
flat = false
align = 1
script = ExtResource( 8 )
pressed_sfx = "ui_confirm"

[node name="UnlockEverything" type="Button" parent="MenuContainer/DebugMenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 520.0
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../Invincibility")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 9 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Unlock Everything"
flat = false
align = 1
script = ExtResource( 8 )
pressed_sfx = "ui_confirm"

[node name="Invincibility" type="Button" parent="MenuContainer/DebugMenu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 520.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../Control/OptionsExit")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 9 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Invincible: --"
flat = false
align = 1
script = ExtResource( 10 )

[node name="ArrowsIndicator" parent="MenuContainer/DebugMenu/Invincibility" index="0" instance=ExtResource( 4 )]

[node name="Control" type="Control" parent="MenuContainer" index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 567.0
margin_right = 560.0
margin_bottom = 796.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3

[node name="OptionsExit" type="Button" parent="MenuContainer/Control" index="0"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -254.5
margin_top = -84.0
margin_right = 254.5
margin_bottom = -28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../DebugMenu/Invincibility")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../FullscreenOption")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit Options"
flat = false
align = 1
script = ExtResource( 8 )
pressed_sfx = "ui_confirm"

[node name="ScanlineFx" type="Node2D" parent="." index="4"]

__meta__ = {
"_edit_group_": true
}

[node name="ScanlineDark" type="Sprite" parent="ScanlineFx" index="0"]

position = Vector2( 960, 540.314 )
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 0, 0, 1920, 840 )
_sections_unfolded = [ "Region", "Transform", "Visibility" ]

[node name="ScanlineBright" type="Sprite" parent="ScanlineFx" index="1"]

modulate = Color( 1, 1, 1, 0.1 )
position = Vector2( 960, 960 )
texture = ExtResource( 12 )
region_enabled = true
region_rect = Rect2( 0, 760, 1920, 0 )
_sections_unfolded = [ "Region", "Transform", "Visibility" ]

[node name="ScanlinePlayer" type="AnimationPlayer" parent="ScanlineFx" index="2"]

root_node = NodePath("..")
autoplay = "loop"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/loop = SubResource( 2 )
blend_times = [  ]

[node name="TopEdge" type="ColorRect" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 115.0
margin_right = 1920.0
margin_bottom = 130.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0.921569, 1, 1 )

[node name="BottomEdge" type="ColorRect" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 952.0
margin_right = 1920.0
margin_bottom = 967.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0.921569, 1, 1 )

[node name="DebugButton" type="Button" parent="." index="7"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="DebugTimer" type="Timer" parent="DebugButton" index="0"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="left_pressed" from="MenuContainer/FullscreenOption/ArrowsIndicator" to="MenuContainer/FullscreenOption" method="_on_ArrowsIndicator_left_pressed"]

[connection signal="right_pressed" from="MenuContainer/FullscreenOption/ArrowsIndicator" to="MenuContainer/FullscreenOption" method="_on_ArrowsIndicator_right_pressed"]

[connection signal="left_pressed" from="MenuContainer/BGM/ArrowsIndicator" to="MenuContainer/BGM" method="_on_ArrowsIndicator_left_pressed"]

[connection signal="right_pressed" from="MenuContainer/BGM/ArrowsIndicator" to="MenuContainer/BGM" method="_on_ArrowsIndicator_right_pressed"]

[connection signal="left_pressed" from="MenuContainer/BGM_volume/ArrowsIndicator" to="MenuContainer/BGM_volume" method="_on_ArrowsIndicator_left_pressed"]

[connection signal="right_pressed" from="MenuContainer/BGM_volume/ArrowsIndicator" to="MenuContainer/BGM_volume" method="_on_ArrowsIndicator_right_pressed"]

[connection signal="left_pressed" from="MenuContainer/SfxVolume/ArrowsIndicator" to="MenuContainer/SfxVolume" method="_on_ArrowsIndicator_left_pressed"]

[connection signal="right_pressed" from="MenuContainer/SfxVolume/ArrowsIndicator" to="MenuContainer/SfxVolume" method="_on_ArrowsIndicator_right_pressed"]

[connection signal="pressed" from="MenuContainer/ResetSave" to="." method="_on_ResetSave_pressed"]

[connection signal="pressed" from="MenuContainer/DebugMenu/Restart" to="." method="_on_Restart_pressed"]

[connection signal="pressed" from="MenuContainer/DebugMenu/UnlockEverything" to="." method="_on_UnlockEverything_pressed"]

[connection signal="left_pressed" from="MenuContainer/DebugMenu/Invincibility/ArrowsIndicator" to="MenuContainer/DebugMenu/Invincibility" method="_on_ArrowsIndicator_left_pressed"]

[connection signal="right_pressed" from="MenuContainer/DebugMenu/Invincibility/ArrowsIndicator" to="MenuContainer/DebugMenu/Invincibility" method="_on_ArrowsIndicator_right_pressed"]

[connection signal="pressed" from="MenuContainer/Control/OptionsExit" to="." method="_on_options_exit_pressed"]

[connection signal="pressed" from="DebugButton" to="." method="_on_DebugButton_pressed"]

[connection signal="timeout" from="DebugButton/DebugTimer" to="." method="_on_DebugTimer_timeout"]


